Add patches for Drivedroid v1

--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -402,6 +402,12 @@ config USB_CONFIGFS_MASS_STORAGE
 	  As its storage repository it can use a regular file or a block
 	  device (in much the same way as the "loop" device driver),
 	  specified as a module parameter or sysfs option.
+	  
+config USB_CONFIGFS_MASS_STORAGE_PATCH
+	bool "Mass storage Patch"
+	depends on USB_CONFIGFS_MASS_STORAGE
+	help
+	  Mass Storage Patch for Drivedroid
 
 config USB_CONFIGFS_F_LB_SS
 	bool "Loopback and sourcesink function (for testing)"
